<resources>
    <string name="app_name">Just Java</string>
    <string name="quantity">QUANTITY</string>
    <string name="one">1</string>
    <string name="order">ORDER</string>
    <string name="price">ORDER SUMMARY</string>
    <string name="display_price">$0</string>
    <string name="plus">+</string>
    <string name="mines">-</string>
    <string name="whippedCream">Whipped Cream</string>
    <string name="toppings">TOPPINGS</string>
    <string name="chocolate">Chocolate</string>
    <string name="name">Your Name</string>

</resources>
