<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/quantity"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/plus_one"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:onClick="increment"
            android:text="@string/plus" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="15dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="16dp"
            android:textSize="16sp" />
        <!--android:text="@string/one"-->


        <Button
            android:id="@+id/mines"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:onClick="decrement"
            android:text="@string/mines" />


    </LinearLayout>

    <TextView
        android:id="@+id/order_summary_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="19dp"
        android:text="@string/price"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/ORDER_SUMMARY_TEXT_VIEW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/display_price"
        android:textSize="16sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="submitOrder"
        android:text="@string/order" />

</LinearLayout>